--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>anicodes projects</title>
+  <style>
+    body {
+      background-color: #333;
+      color: #fb4b4b;
+      font-size: 32px;
+			font-family: monospace;
+			display: flex;
+    }
+		.wrap {
+			margin: auto;
+			padding-top: 100px;
+		}
+  </style>
 </head>
 <body>
-  <p>"Hello World"</p>
+  <div class="wrap">
+    <p>AniCode</p>
+    <p>Coming soon...</p>
+  </div>
 </body>
 </html>
